--- a/app/src/main/res/values/tomkaistring.xml
+++ b/app/src/main/res/values/tomkaistring.xml
@@ -1,2 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources></resources>
+<resources>
+     <string name="tomkai">
+        <![CDATA[
+        <b>วัตถุดิบ</b>
+        <br>1.ไก่ (ส่วนสะโพกติดกระดูก (ดิบ)600กรัม</b>
+        <br>2.หัวกะทิ 1 1/8ถ้วยตวง</b>
+        <br>3.มะพร้าวขูด 500 กรัม</b>
+        <br>4.น้ำ 3 ½ ถ้วยตวง</b>
+        <br>5.หางกะทิ 3 ¾ ถ ้วยตวง</b>
+        <br></br>
+        <br><b>ผัก</b></br>
+        <br>1.ข่าอ่อน (หันเป็นแว่นบางๆ)4ช้อนโต๊ะ</br>
+        <br>2.ตะไคร้ (หั่นเป็นท่อน)10ท่อน</br>
+        <br>3.ใบมะกรูดอ่อน5ใบ</br>
+        <br>4.พริกขี้หนูสด (บุบพอแตก)22-23เม็ด</br>
+        <br>5.ผักชี (สำหรับโรยหน้า)20ใบ</br>
+        <br>6.เห็ดฟาง21ลูก</br>
+        <br>7.น้ำปลา5 ½ ช้อนโต๊ะ</br>
+        <br>8.น้ำมะนาว4 ¾ ช้อนโต๊ะ</br>
+        <br></br>
+        <br><b>วิธีทำ</b></br>
+        <br>1.ล้างไก่ให้สะอาด  หั่นชิ้นพอคำ พักไว้</br>
+        <br>2.เห็ดฟางเกลาดินออกให้หมดล้างน้ำหั่น 3 ซีก</br>
+        <br>3.คั้นมะพร้าว ให้ได้หัวกะทิ 1 1/8  ถ้วยตวง  และหางกะทิ 3 ¾ ถ้วยตวง</br>
+        <br>4.ล้างข่าให้สะอาด ปอกเปลือกออก หั่นเป็นแว่นบาง ๆ</br>
+        <br>5.ตะไคร้ตัดรากออก ทุบพอแตก ตัดเป็นท่อน ๆ  ยาวประมาณ 3 เซนติเมตร</br>
+        <br>6.ใบมะกรูดฉีกเส้นกลางออก แล้วฉีกขวางอีกครั้ง (แบ่ง 4 ส่วน)</br>
+        <br>7.พริกขี้หนูบุบพอแตก แช่ไว้ในน้ำมะนาวที่จะใช้ปรุง เพื่อไม่ให้พริกมีสีคล้ำไม่น่ารับประทาน</br>
+        <br>8.นำหางกะทิใส่หม้อ ตั้งไฟอ่อนต้องคนเป็นระยะมิฉะนั้นกะทิจะเป็นลูกหรือแยกตัว พอเดือดใส่ไก่ ใส่ตะไคร้ และข่า เดือดอีกครั้ง ใส่เห็ดฟาง เติมน้ำปลาชิมรสให้เค็มพอดี พอไก่สุกนุ่มดี เติมใบมะกรูดลดไฟเติมหัวกะทิคนให้เข้ากันยกลง ปรุงรสด้วยพริกขี้หนู น้ำมะนาว โรยด้วยผักชี</br>
+        <br><b>เคล็ดลับความอร่อย</b></br>
+        <br>1.ต้มข่าไก่ควรรับประทานร้อน ๆ จะอร่อย และกะทิไม่เป็นไข รสชาติจะเข้มข้นกว่ารับประทานในขณะที่เย็น</br>
+        <br>2.ข่าอ่อน ใบมะกรูดอ่อน ในตำรับนี้สามารถรับประทานได้หมด ยกเว้นตะไคร้</br>
+
+        ]]>
+    </string>
+</resources>
