--- a/app/src/main/res/values/tomyumstring.xml
+++ b/app/src/main/res/values/tomyumstring.xml
@@ -1,2 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources></resources>
+<resources>
+     <string name="tomyum">
+        <![CDATA[
+            <br><b>ส่วนผสม</b></br>
+            <br>1.กุ้งกุลาดำตัวใหญ่ หรือกุ้งแม่น้ำ</br>
+            <br>2.เห็ดฟางผ่าครึ่ง</br>
+            <br>3.พริกขี้หนู</br>
+            <br>4.ใบมะกรูดฉีกเอาก้านออก</br>
+            <br>5.ข่าหั่นแว่น</br>
+            <br>6.ตะไคร้ทุบแล้วหั่นท่อน</br>
+            <br>7.ผักชี โรยหน้า</br>
+            <br>8.น้ำพริกเผา 1 ช้อนชา</br>
+            <br>9.มะนาว 1 ลูก</br>
+            <br>10.กะทิหรือนมข้นจืด 1/2 ถ้วย</br>
+            <br>11.น้ำตาล 1/2 ช้อนโต๊ะ</br>
+            <br>12.น้ำปลา 1 ช้อนโต๊ะ</br>
+            <br>13.เกลือ 1 หยิบมือ</br>
+            <br>14.น้ำซุป (ถ้าไม่มีเป็นซุปสำเร็จรูปกับน้ำเปล่า)</br>
+            <br></br>
+            <br><b>วิธีทำ</b></br>
+            <br>1.ก่อนอื่นต้องแกะเปลือกกุ้งผ่าเอาเส้นดำออกล้างให้สะอาด หั่นเครื่องต้มยำ พริก ขิง ข่า ตะไคร้ ใบมะกรูดและเห็ด ให้พร้อม</br>
+            <br>2.นำน้ำซุปไปตั้งไฟให้เดือด ใส่เครื่องต้มยำลงไปให้หมด พอเดือดอีกครั้งก็ใสกุ้งที่เตรียมไว้ลงไปเลย</br>
+            <br>3.หลังจากใส่กุ้งลงไปแล้ว ให้ใส่ น้ำตาล น้ำปลา พริกขี้หนู พริกเผา ใครชอบรสแบบไหนใส่ลงไปตามชอบ ตามด้วยเห็ดฟาง</br>
+            <br>4.ปิดเตาแล้วค่อยปรุงด้วยมะนาว(เคล็ดลับการบีบน้ำมะนาว ไม่ควรใส่มะนาวในน้ำที่กำลังเดือด เพราะจะทำให้มะนาวและน้ำซุปมีรสชม) โรยเกลือนิดหน่อยเพื่อดึงรสเปรี้ยวหวานเค้มให้เข้มข้นมากยิ่งขึ้น</br>
+            <br>5.จัดชามเสิร์ฟ หั่นผักโรยหน้า เพิ่มความหอม</br>
+        ]]>
+    </string>
+</resources>
