--- a/app/src/main/res/values/pandanjelly_st.xml
+++ b/app/src/main/res/values/pandanjelly_st.xml
@@ -1,2 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources></resources>
+<resources>
+    <string name="pandanjelly">
+        <![CDATA[
+        <br><b>ส่วนผสม วุ้นใบเตย</b></br>
+        <br>1.น้ำเปล่า 2 ถ้วย (ถ้าต้องการความหอมให้ผสมกลิ่นมะลิ 1 ช้อนชา)</br>
+        <br>2.ผงวุ้น 1 ช้อนโต๊ะ + 2 ช้อนชา</br>
+        <br>3.น้ำใบเตยคั้นเข้มข้น 1/2 ถ้วย</br>
+        <br>4.น้ำตาลทราย 3/4 ถ้วย ถึง 1 ถ้วย</br>
+        <br></br>
+        <br><b>ส่วนผสม วุ้นกะทิ</b></br>
+        <br>1.กะทิ 2+1/2 ถ้วย</br>
+        <br>2.ผงวุ้น 1 ช้อนโต๊ะ + 2 ช้อนชา</br>
+        <br>3.น้ำตาลทราย 1/2 ถ้วย</br>
+        <br>4.เกลือป่น ปลายช้อนชา</br>
+        <br></br>
+        <br><b>วิธีทำวุ้นกะทิใบเตย</b></br>
+        <br>1. ทำวุ้นใบเตย โดยใส่น้ำและผงวุ้นลงในหม้อ คนให้ผงวุ้นกระจายทั่ว ๆ และไม่เป็นก้อน พักทิ้งไว้สักครู่ จากนั้นนำขึ้นตั้งไฟกลางอ่อน คนผสมเรื่อย ๆ จนเริ่มเดือดและผงวุ้นละลายหมด จากนั้นเติมน้ำตาลทรายลงไป คนให้น้ำตาลทรายละลาย</br>
+        <br>2. ใส่น้ำใบเตยคั้นลงไปคนผสมให้เข้ากัน รอจนเดือดอีกครั้ง ปิดไฟ ยกลงจากเตาแล้วนำส่วนผสมไปกรอง พักไว้จนเริ่มอุ่น</br>
+        <br>3. เทส่วนผสมวุ้นใบเตยใส่ลงพิมพ์ที่เตรียมไว้ประมาณครึ่งพิมพ์ จากนั้นนำไปแช่เย็นจนเซตตัว</br>
+        <br>4. ทำวุ้นกะทิ โดยใส่กะทิลงในหม้อ ตามด้วยผงวุ้น จากนั้นคนให้ผงวุ้นกระจายทั่ว ๆ นำขึ้นตั้งไฟกลางอ่อน คนจนผงวุ้นละลาย และกะทิเริ่มเดือด (แต่ไม่ต้องแตกมัน) จากนั้นเติมน้ำตาลทรายลงไป คนให้น้ำตาลทรายละลาย ปิดไฟ ยกลงจากเตา พักไว้จนเริ่มอุ่น</br>
+        <br>5. ตักส่วนผสมวุ้นกะทิหยอดลงในพิมพ์ทับวุ้นใบเตยจนเต็มพิมพ์ (ต้องแน่ใจว่าวุ้นใบเตยด้านล่างเซตตัวดีแล้ว) นำวุ้นไปแช่เย็นจนเซตตัว นำออกจากพิมพ์ พร้อมเสิร์ฟ</br>
+        ]]>
+    </string>
+</resources>
