--- a/app/src/main/res/values/ohliang_st.xml
+++ b/app/src/main/res/values/ohliang_st.xml
@@ -1,2 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources></resources>
+<resources>
+    <string name="ohliang">
+        <![CDATA[
+                <br><b>ส่วนผสม</b></br>
+                <br>1.ผงโอเลี้ยง 5-6 ช้อนโต๊ะ</br>
+                <br>2.น้ำเปล่า 1 ½ ถ้วย</br>
+                <br>3.น้ำตาลทราย 10 ช้อนโต๊ะ น้ำแข็ง3</br>
+                <br></br>
+                <br><b>วิธีทำ</b></br>
+                <br>1.ต้มน้ำเปล่าจนเดือด เตรียมไว้</br>
+                <br>2.ใส่ผงโอเลี้ยงลงในถุงกาแฟ วางลงในเหยือกสเตนเลสเทน้ำเดือดลงไป เขย่าให้น้ำทั่วถึงพักทิ้งไว้ 7-10 นาที </br>
+                <br>3.ใส่น้ำตาลทรายลงตามชอบ เทโอเลี้ยงตามลงไปคนผสมให้น้ำตาลทรายละลาย เทใส่แก้วที่มีน้ำแข็งจนเต็ม</br>
+        ]]>
+    </string>
+</resources>
