--- a/app/src/main/res/values/lemontea_st.xml
+++ b/app/src/main/res/values/lemontea_st.xml
@@ -1,2 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources></resources>
+<resources>
+    <string name="lemontea">
+        <![CDATA[
+             <br><b>ส่วนผสม</b></br>
+             <br>1.ผงชาเขียว 1 ช้อนโต๊ะ</br>
+             <br>2.น้ำผึ้ง 30-50 ml.</br>
+             <br>3.น้ำตาลทราย 3 ช้อนชา</br>
+             <br>4.น้ำมะนาว เกลือเล็กน้อย</br>
+             <br>5.น้ำร้อน 250 ml.</br>
+             <br></br>
+             <br><b>วิธีทำ</b></br>
+             <br>1.นำผงชาเขียวใส่ลงในถุงกรองแช่น้ำร้อน 3-5 นาที ยกถุงชาออก</br>
+             <br>2.เติมน้ำตาลทราย น้ำผึ้ง คนให้ละลาย</br>
+             <br>3.เติมเกลือนิดหน่อย พร้อมน้ำมะนาว คนให้เข้ากัน</br>
+             <br>4.ตักน้ำแข็งลงในแก้ว 16 ออนซ์</br>
+             <br>5.เทน้ำชาเขียวน้ำผึ้งมะนาวลงในแก้ว ใช้ช้อนคนให้เข้ากับน้ำแข็ง</br>
+        ]]>
+    </string>
+</resources>
