--- a/app/src/main/res/values/greencurrystring.xml
+++ b/app/src/main/res/values/greencurrystring.xml
@@ -1,2 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources></resources>
+<resources>
+     <string name="greencurry">
+        <![CDATA[
+        <b>วัตถุดิบ</b>
+        <br>1.พริกแกงเขียวหวานผสมพริกแกง</br>
+        <br>2.สะโพกไก่ 500 กรัม</br>
+        <br>3.เครื่องในไก่ 500 กรัม (หรือมากกว่าได้ตามชอบ)</br>
+        <br>4.เลือดไก่ 1 ก้อน (ใส่หรือไม่ใส่ก็ได้)</br>
+        <br>5.มะเขือเปราะ 500 กรัม</br>
+        <br>6.มะเขือพวง 500 กรัม</br>
+        <br>7.พริกขี้หนูสวน 100 กรัม (โขลกหรือบด ให้พอละเอียด)</br>
+        <br>8.กะทิสด 1½ เอาเฉพาะหัว หรือจะใช้แบบกล่องก็เอากล่องขนาด 1000 มิลลิลิตร</br>
+        <br>9.ใบโหรพา 200 กรัม</br>
+        <br>10.พริกแดงเพื่อตกแต่ง 5 เม็ด (ใส่หรือไม่ก็ได้)</br>
+        <br>11.น้ำมันพืช 2 ช้อนโต๊ะ</br>
+        <br>12.เกลือ หรือ น้ำปลา</br>
+        <br>13.น้ำตาลปิ๊ป 2 ช้อนโต๊ะ</br>
+        <br></br>
+        <br><b>วิธีทําแกงเขียวหวาน</b></br>
+        <br>1. นำเนื้อไก่ เครื่องในและเลือดไก่ มาล้างทำความสะอาด จากนั้นนำเนื้อไก่ต่างๆมาหั่นให้ได้ชิ้นพอดีคำ</br>
+        <br>2. เตรียมผักต่างๆสำหรับปรุงอาหาร มะเขือเปราะล้างและ ผ่าครึ่งหั่น สี่ ชิ้น แช่ในน้ำผมสมเกลือเพื่อไม่ให้มะเขือดำ จากนั้นก็เด็ดมะเขือพวงลงไปแช่รวมกันด้วย ใบโหรพาเด็ดเอาแต่ใบล้างน้ำแล้วผึ่งในตระกร้าไว้</br>
+        <br>3. นำหัวกะทิมาผัดกับพริกแกงให้หอม คือเริ่มจากเอาน้ำมันพืช 2 ช้อนโต๊ะ ลงกระทะ จากนั้นนำพริกขี้หนูสวนที่โขลกแล้วลงไปเจียวให้หอมด้วยไฟอ่อน ตามด้วยพริกแกงลงไปผัดตาม ค่อยๆเติมหัวกะทิ ทีละทัพพี ให้ได้ 3 ทัพพี เคี่ยวให้กะทิแตกมัน </br>
+        <br>4. จากนั้นให้ใส่ไก่ลงผัดให้พอสุก ตามด้วยเครื่องใน เติมเกลือ 1/2 ช้อนชา ผัดให้พอสุก</br>
+        <br>5. จากนั้นให้เติมหัวกะทิส่วนที่เหลือลงไป เปิดไฟแรงให้เดือดสักพัก</br>
+        <br>6. ใส่มะเขือเปราะ และมะเขือพวงลงไป หมั่นคนให้มะเขือจมน้ำแกงเพื่อมะเขือจะได้ไม่ดำ ทำให้น่าทาน จนมะเขือเริ่มสุก เติมน้ำปลา น้ำตาลปิ๊ป ลงไป ชิมให้ได้รสตามต้องการ ใส่ใบโหรพา เป็นลำดับสุดท้าย คนให้ทั่ว ปิดไฟ ยกลง </br>
+        <br>7. ตักเสิร์ฟรับประทานได้เลย…ที่เป็นแกงเขียวกวานไก่รสกลมกล่อมและจัดจ้าน สามารถทานกับขนมจีนหรือข้าวสวยร้อนๆได้แล้ว</br>
+        ]]>
+
+    </string>
+</resources>
