--- a/app/src/main/res/values/cassavastring.xml
+++ b/app/src/main/res/values/cassavastring.xml
@@ -1,2 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources></resources>
+<resources>
+    <string name="cassava">
+        <![CDATA[
+         <br><b>ส่วนผสม มันสำปะหลังเชื่อม</b></br>
+         <br>1.มันสำปะหลัง 1 หัว</br>
+         <br>2.น้ำตาลทราย 2 ถ้วย</br>
+         <br>3.น้ำลอยดอกมะลิ 5 ถ้วย (หรือน้ำผสมกลิ่นมะลิ)</br>
+         <br></br>
+         <br><b>ส่วนผสม กะทิสำหรับราด</b></br>
+         <br>1.หัวกะทิ 1 ถ้วย</br>
+         <br>2.แป้งข้าวโพด 1/2 ช้อนโต๊ะ</br>
+         <br>3.เกลือป่น 1/4 ช้อนชา</br>
+         <br></br>
+         <br><b>วิธีทำมันสำปะหลังเชื่อม</b></br>
+         <br>1. หั่นมันสำปะหลังเป็นท่อนสั้น ๆ ปอกเปลือกแล้วล้างให้สะอาด เตรียมไว้</br>
+         <br>2. ใส่น้ำตาลทรายลงในกระทะเทฟลอน (หรือกระทะทองเหลืองถ้ามี) ตามด้วยน้ำลอยดอกมะลิ ใช้ไฟกลางเคี่ยวจนน้ำตาลทรายละลายหมด</br>
+         <br>3. เมื่อน้ำเชื่อมเดือดแล้วใส่มันสำปะหลังลงไปต้มจนมันเริ่มสุกบางส่วนแล้วลดเป็นไฟอ่อน จากนั้นเชื่อมมันไปเรื่อย ๆ ประมาณ 1-2 ชั่วโมง (ขึ้นอยู่กับขนาดของมันสำปะหลังที่เราหั่น) จนน้ำเชื่อมซึมเข้าไปในเนื้อมัน และเนื้อมันมีลักษณะใส ปิดไฟ พักไว้</br>
+         <br>4. ทำกะทิสำหรับราด โดยละลายแป้งข้าวโพดกับหัวกะทิเล็กน้อย ใส่เกลือป่นลงไปคนให้แป้งละลายหมดแล้วนำขึ้นตั้งไฟอ่อนคนไปเรื่อย ๆ จนส่วนผสมข้นและเหนียว ปิดเตา พักไว้จนเย็น</br>
+         <br>5. ตักมันสำปะหลังเชื่อมใส่ถ้วย ราดด้วยกะทิ พร้อมเสิร์ฟ    </br>
+        ]]>
+    </string>
+</resources>
