--- a/app/src/main/res/values/bualoistring.xml
+++ b/app/src/main/res/values/bualoistring.xml
@@ -1,2 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources></resources>
+<resources>
+    <string name="bualoi">
+        <![CDATA[
+        <br><b>วัตถุดิบ</b></br>
+        <br>1.แป้งข้าวเหนียว 100 กรัม</br>
+        <br>2.แป้งมัน 10 กรัม</br>
+        <br>3.น้ำ 8 ช้อนโต๊ะ</br>
+        <br>4.กะทิ 4 ถ้วย (หางกะทิ 2 ถ้วย + หัวกะทิ 2 ถ้วย)</br>
+        <br>5.น้ำตาลปี๊บ 100	กรัม</br>
+        <br>6.น้ำตาลทราย 80 กรัม</br>
+        <br>7.เกลือป่น 1/4 ช้อนโต๊ะ</br>
+        <br>8.มะพร้าวอ่อนหั่นชิ้นพอคำ 50 กรัม</br>
+        <br>9.ไข่ไก่ 2 ฟอง (ใส่เพิ่มได้ตามต้องการ)</br>
+        <br>10.สีผสมอาหาร อย่างละ 4 หยด(เลือกสีตามใจชอบ) </br>
+         <br></br>
+        <br><b>ววิธีทำ</b></br>
+        <br>1.ใส่แป้งข้าวเหนียว แป้งมัน และสีผสมอาหารลงในชาม ค่อย ๆ ใส่น้ำลงพร้อมกับนวดให้แป้งเป็นเนื้อเดียวกัน </br>
+        <br>2.ทำแป้งให้ครบทุกสี แล้วคลุมพลาสติกแรปพักไว้</br>
+        <br>3.นำแป้งมาปั้นเป็นก้อนกลมเล็ก ๆ  แล้วนำไปต้มในน้ำเดือด พอแป้งลอยขึ้นมา ให้ตักขึ้นพักไว้ในน้ำเย็น</br>
+        <br>4.นำหม้อขึ้นตั้งเตา ใส่หางกะทิ น้ำตาลปี๊บ น้ำตาลทราย และเกลือ คนให้ส่วนผสมเข้ากัน </br>
+        <br>5.ตอกไข่ลงในน้ำกะทิทีละฟอง เมื่อไข่สุกตักขึ้นพักไว้ </br>
+        <br>6.เติมหัวกะทิลงไป คนให้ส่วนผสมเข้ากัน ใส่แป้งบัวลอย และมะพร้าวอ่อนลงไป แล้วต้มอย่างน้อย 10 นาที </br>
+        <br>7.ตักใส่ถ้วย เสิร์ฟพร้อมไข่หวาน </br>
+        ]]>
+    </string>
+</resources>
