--- a/app/src/main/res/values/blacktea_st.xml
+++ b/app/src/main/res/values/blacktea_st.xml
@@ -1,2 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources></resources>
+<resources>
+    <string name="blacktea">
+        <![CDATA[
+        <br><b>ส่วนผสม</b></br>
+        <br>1.น้ำสะอาด</br>
+        <br>2.ผงชาดำ</br>
+        <br>3.น้ำตาลทรายแดง</br>
+        <br>4.น้ำแข็ง</br>
+        <br></br>
+        <br><b>วิธีทำ</b></br>
+        <br>1.นำผงชาดำใส่ในถุงชา นำน้ำร้อนมาราดในถุงชา ให้น้ำชาดำไหลลงในแก้วที่เตรียมไว้</br>
+        <br>2.เพิ่มความหวานด้วยการเติมน้ำตาลทรายแดงลงไปเช็คความหวานตามต้องการ </br>
+        <br>3.ใส่น้ำแก้วที่มีน้ำแข็งเตรียมไว้พร้อมเสิร์ฟ</br>
+
+        ]]>
+    </string>
+</resources>
